[gd_scene load_steps=5 format=3 uid="uid://c77yvk1jsoi7h"]

[ext_resource type="Script" path="res://prefabs/interior/dynamic_door.gd" id="1_f50ao"]
[ext_resource type="PackedScene" uid="uid://dg2ywt0a4ti7n" path="res://models/apt_door/apt_door.glb" id="2_i55s8"]
[ext_resource type="Script" path="res://prefabs/interior/dynamic_door_itself.gd" id="3_0e8fi"]
[ext_resource type="AudioStream" uid="uid://dvn2cnf6cqqx1" path="res://sounds/random_door_noise.tres" id="4_go2uy"]

[node name="dynamic_door" type="Node3D"]
script = ExtResource("1_f50ao")

[node name="HingeJoint3D" type="HingeJoint3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
node_a = NodePath("../door_anchor")
node_b = NodePath("../door_dynamic/Node/door")
params/bias = 0.5
angular_limit/enable = true
angular_limit/upper = 0.0
angular_limit/lower = 0.0
angular_limit/bias = 0.99

[node name="door_anchor" type="StaticBody3D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="door_dynamic" parent="." instance=ExtResource("2_i55s8")]

[node name="door" parent="door_dynamic/Node" index="0"]
script = ExtResource("3_0e8fi")

[node name="CollisionShape3D" parent="door_dynamic/Node/door" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.05, 0.8)

[node name="DoorNoisePlayer" type="AudioStreamPlayer3D" parent="door_dynamic/Node/door" index="2"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 1)
stream = ExtResource("4_go2uy")
bus = &"SFX"

[connection signal="body_entered" from="door_dynamic/Node/door" to="." method="_on_door_body_entered"]
[connection signal="door_bumped" from="door_dynamic/Node/door" to="." method="_on_door_bumped"]

[editable path="door_dynamic"]
